# cyber-security-assistant-2

./: .gitignore  README.md  commad to run the server.txt  git_upload.txt  types.txt
agents/: main.py  pyproject.toml  server.py
agents/prompts/: application_security_qa.md  cannot_answer.md  format_generator_based_on_query.md  format_response.md  intent_classifier.md  irrelevant.md  network_security_qa.md  other_cybersecurity_qa.md  query_classifier.md  system_prompt.md
agents/response_templates/: application_security.md  cannot_answer.md  cyber_response_template.md  irrelevant.md  network_security.md  other_cybersecurity.md
frontend/: package-lock.json  package.json
frontend/src/app/: agentic-chat.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
